<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Banzai</string>
    <string name="preference_file_key">com.pan.banzai</string>
    <string name="title_activity_login">Banzai</string>
    <string name="action_settings">Sign out</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="title_section1">Dashboard</string>
    <string name="title_section2">OS Usage</string>
    <string name="title_section3">ServerDetails</string>
    <string name="title_section4">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="sign_in_text">Sign in</string>
    <string name="password_text">Password</string>
    <string name="submit_text">Submit</string>
    <string name="email_text">Email</string>
    <string name="cpu_text">CPU</string>
    <string name="ram_text">RAM</string>
    <string name="storage_text">Storage</string>
    <string name="average_disk_queue_length">Disk %1$d average queue length: %2$d</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>
    <string name="settings_title">Settings</string>
    <string name="cpu_threshold_desc">CPU Utilization Threshold</string>
    <string name="ram_threshold_desc">RAM Utilization Threshold</string>
    <string name="storage_threshold_desc">Storage Utilization Threshold</string>
    <string name="notifications">Notifications</string>
    <string name="disk_queue_wait_length">Disk Queue Wait Length</string>
    <string name="graph_time_frame">Graph Time Frame (hours)</string>
    <string name="deauthorize">Deauthorize</string>
    <string name="save">Save</string>
    <string name="settings_saved">Settings saved</string>
    <string name="current_distribution">Current Distribution</string>
    <string name="historic_distribution">Historic Distribution</string>
    <string name="operating_systems">Operating Systems</string>
    <string name="utilization_aggregate_title">Aggregate %1$s Utilization</string>
    <string name="utilization_breakdown_title">%1$s Utilization Breakdown</string>

</resources>