<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.pan.banzai"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notifications"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.pan.banzai.ThresholdView
        android:id="@+id/cpuThreshold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        custom:descText="@string/cpu_threshold_desc"
        custom:descTextSize="20" />

    <com.pan.banzai.ThresholdView
        android:id="@+id/ramThreshold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        custom:descText="@string/ram_threshold_desc"
        custom:descTextSize="20" />

    <com.pan.banzai.ThresholdView
        android:id="@+id/storageThreshold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        custom:descText="@string/storage_threshold_desc"
        custom:descTextSize="20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/diskQueWaitLengthInput"
            android:text="@string/disk_queue_wait_length"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/diskQueWaitLengthInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@+id/graphTimeFrameInput"
            android:text="@string/graph_time_frame"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/graphTimeFrameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

</LinearLayout>