<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.pan.banzai"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/donutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/cpuContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <com.pan.banzai.DonutGraph
                android:id="@+id/cpuPieGraph"
                android:layout_width="@dimen/donut_pie_chart_radius"
                android:layout_height="@dimen/donut_pie_chart_radius"
                android:layout_margin="@dimen/donut_pie_chart_margins"
                custom:type="cpu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpu_text"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ramContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <com.pan.banzai.DonutGraph
                android:id="@+id/ramPieGraph"
                android:layout_width="@dimen/donut_pie_chart_radius"
                android:layout_height="@dimen/donut_pie_chart_radius"
                android:layout_margin="@dimen/donut_pie_chart_margins"
                custom:type="ram" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ram_text"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/storageContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <com.pan.banzai.DonutGraph
                android:id="@+id/storagePieGraph"
                android:layout_width="@dimen/donut_pie_chart_radius"
                android:layout_height="@dimen/donut_pie_chart_radius"
                android:layout_margin="@dimen/donut_pie_chart_margins"
                custom:type="storage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage_text"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/queueLengthContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:orientation="vertical" />

</LinearLayout>